:bug: Fix menu and loading z-index

--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@ body
 .loadingScreen
 {
     position: absolute;
-    z-index: 10;
+    z-index: 10000;
     width: 100%;
     height: 100%;
     object-position: bottom;
@@ -52,7 +52,7 @@ body
 .loadingButton
 {
     position: absolute;
-    z-index: 10;
+    z-index: 10002;
     left: calc(50% - 100px);
     bottom: 80px;
     width: 200px;
@@ -72,7 +72,7 @@ body
     width: 100%;
     height: 10px;
     background: #e60509;
-    z-index: 10;
+    z-index: 10001;
     transform-origin: top left;
     transition: transform 0.5s;
     transform: scaleX(0);
